Altera link para o Siga

--- a/página.html
+++ b/página.html
@@ -57,7 +57,7 @@
           <div id="navbarSupportedContent" class="collapse navbar-collapse">
             <ul class="navbar-nav ml-auto mt-2">
               <li class="nav-item">
-                <a class="nav-link" href="https://sig.ifc.edu.br/sigaa/verTelaLogin.do"> SIGAA </a>
+                <a class="nav-link" href="https://sig.ifc.edu.br/sigaa/verTelaLogin.do"> Acesse SIGAA </a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="https://classroom.google.com/u/0/h"> Google Sala de Aula </a>
