--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <script src="https://unpkg.com/sweetalert2@9/dist/sweetalert2.all.js"></script>
     <link rel="stylesheet" href="./css/Login.css"> 
 
-    <title>Organizador de Matérias</title>
+    <title> Organizador de Matérias </title>
 </head>
 <body>
     <div id="page" class="d-flex"> 
@@ -23,7 +23,7 @@
                 class="list-group-item list-group-item-action active" 
                 aria-current="true"> My Pending Matters </a>
 
-                <a href="página.html" 
+                <a href="index.html" 
                 class="list-group-item list-group-item-action-info bg-light"> Painel de Controle </a>
                 
 
@@ -63,7 +63,7 @@
                 <a class="nav-link" href="https://classroom.google.com/u/0/h"> Google Sala de Aula </a>
 
               <li class="nav-item active">
-                <a href="página.html" class="nav-link"> Home </a>
+                <a href="index.html" class="nav-link"> Home </a>
               </li>
               <li class="nav-item dropdown">
                 <a
@@ -99,7 +99,7 @@
               type="text"
               placeholder="Nova tarefa"
             />
-            <button class="btn btn-primary ml-1" onclick="addTask()">
+            <button class="btn btn-primary ml-1" onclick="addTask()"> 
               Adicionar
             </button>
           </div>
@@ -135,7 +135,7 @@
 
         <script src="./js/init.js"></script>
         <script src="./js/auth.js"></script>
-        <script src="./js/página.js"></script>
+        <script src="./js/index.js"></script>
       
 
         <script>
