--- a/profile.html
+++ b/profile.html
@@ -23,7 +23,7 @@
                 class="list-group-item list-group-item-action active" 
                 aria-current="true"> My Pending Matters </a>
 
-                <a href="página.html" 
+                <a href="index.html" 
                 class="list-group-item list-group-item-action-info bg-light"> Painel de Controle </a>
                 
 
@@ -63,7 +63,7 @@
                 <a class="nav-link" href="https://classroom.google.com/u/0/h">Google Sala de Aula</a>
 
               <li class="nav-item active">
-                <a href="página.html" class="nav-link">Home</a>
+                <a href="index.html" class="nav-link">Home</a>
               </li>
               <li class="nav-item dropdown">
                 <a
