--- a/login.html
+++ b/login.html
@@ -26,7 +26,7 @@
               id="Logologin"
               class="col-6 p-4 bg-primary d-flex justify-content-center"
             >
-              <img src="./imagens/livros.png" alt="Logo Firebase" />
+              <img src="./imagens/livro.png" alt="Logo Firebase" />
             </div>
             <div class="col-6 p-5">
               <div id="loginForm">
